--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <img src="https://via.placeholder.com/150" alt="Placeholder Image 1" data-image-id="placeholder1">
+    <img src="https://via.placeholder.com/200" alt="Placeholder Image 2" data-image-id="placeholder2">
     <header>
       <h1>Salón de Belleza</h1>
       <nav>
@@ -34,15 +36,15 @@
       <h2 class="section-title">Bienvenido al Salón de Belleza</h2>
       <div class="magazine-cover">
         <div class="page">
-          <img src="https://images.unsplash.com/photo-1521578107031-21b79448b419?auto=format&fit=crop&q=80&w=1935&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Cliente satisfecho con nuevo peinado" />
+          <img  data-image-id="image1"/>
           <p class="caption">Transformación de Cabello</p>
         </div>
         <div class="page">
-          <img src="https://images.unsplash.com/photo-1600948114144-87c799d550f2?auto=format&fit=crop&q=80&w=1887&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Cliente feliz con manicura" />
+          <img  data-image-id="image2"/>
           <p class="caption">Belleza de Manos</p>
         </div>
          <div class="page">
-          <img src="https://images.unsplash.com/photo-1621600585259-782195468b10?auto=format&fit=crop&q=80&w=1935&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Proceso de cuidado facial" />
+          <img data-image-id="image3" />
           <p class="caption">Rutina Facial</p>
         </div>
         <!-- Agrega más páginas según sea necesario -->
